--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,6 +12,8 @@
 @import 'blocks/visually-hidden';
 
 @import 'blocks/container';
+@import 'blocks/container-right';
+@import 'blocks/container-left';
 
 @import 'blocks/header';
 @import 'blocks/main';
