--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,6 +15,7 @@
 @import 'blocks/container-right';
 @import 'blocks/container-left';
 
+@import 'blocks/tagline';
 @import 'blocks/header';
 @import 'blocks/main';
 @import 'blocks/footer';
