--- a/scss/blocks/_tagline.scss
+++ b/scss/blocks/_tagline.scss
@@ -1,4 +1,5 @@
 .tagline {
+    position: relative;
     padding: 8px 15px;
     display: flex;
     justify-content: center;
@@ -17,5 +18,21 @@
         color: #fff;
     }
 
-    &__link {}
+    &__link {
+        display: flex;
+        align-items: center;
+        gap: 4px;
+        font-family: var(--font-main);
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.57143;
+        color: var(--tagline-link);
+        border-bottom: 1px solid var(--tagline-link);
+    }
+
+    &__close {
+        position: absolute;
+        top: 10px;
+        right: 16px;
+    }
 }
