--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,6 +16,7 @@
 @import 'blocks/container-left';
 
 @import 'blocks/tagline';
+@import 'blocks/nav';
 @import 'blocks/header';
 @import 'blocks/main';
 @import 'blocks/footer';
