--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,7 +13,7 @@
 
 @import 'blocks/container';
 @import 'blocks/container-right';
-@import 'blocks/container-left';
+@import 'blocks/logo';
 
 @import 'blocks/tagline';
 @import 'blocks/nav';
