--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,6 +17,5 @@
 
 @import 'blocks/tagline';
 @import 'blocks/nav';
-@import 'blocks/header';
-@import 'blocks/main';
+@import 'blocks/hero';
 @import 'blocks/footer';
