--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -1,4 +1,14 @@
 .hero {
     height: 820px;
     background: #FFC95C url('../img/hero/bg.jpg') no-repeat center top / cover;
+
+    &__container {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        padding-left: calc((100% - var(--container-width)) / 2 + (var(--container-width) / 2));
+        padding-right: calc((100% - var(--container-width)) / 2);
+    }
+
+    &__content {}
 }
