--- a/scss/blocks/_tagline.scss
+++ b/scss/blocks/_tagline.scss
@@ -34,5 +34,11 @@
         position: absolute;
         top: 10px;
         right: 16px;
+        border-radius: 50%;
+        transition: .2s;
+
+        &:hover {
+            background: var(--yellow);
+        }
     }
 }
