--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,9 @@
 
 @import 'blocks/container';
 @import 'blocks/container-right';
+
+@import 'blocks/btn';
+
 @import 'blocks/logo';
 
 @import 'blocks/tagline';
