--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,12 +13,14 @@
 
 @import 'blocks/container';
 @import 'blocks/container-right';
-
 @import 'blocks/btn';
+@import 'blocks/headline-4';
 
 @import 'blocks/logo';
+@import 'blocks/dots';
 
 @import 'blocks/tagline';
 @import 'blocks/nav';
 @import 'blocks/hero';
+@import 'blocks/arrivals';
 @import 'blocks/footer';
