--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,11 +13,13 @@
 
 @import 'blocks/container';
 @import 'blocks/container-right';
+
 @import 'blocks/btn';
 @import 'blocks/headline-4';
 
 @import 'blocks/logo';
 @import 'blocks/dots';
+@import 'blocks/card';
 
 @import 'blocks/tagline';
 @import 'blocks/nav';
