--- a/scss/blocks/_btn.scss
+++ b/scss/blocks/_btn.scss
@@ -1,6 +1,5 @@
 .btn {
     padding: 12px 56px;
-    height: 56px;
     display: inline-block;
     text-align: center;
     color: #fff;
@@ -14,5 +13,13 @@
 
     &:hover {
         opacity: 0.8;
+    }
+
+    &--small {
+        padding: 9px 40px;
+        font-size: 16px;
+        line-height: 1.75;
+        letter-spacing: -0.03em;
+        color: #fefefe;
     }
 }
