--- a/scss/blocks/_card.scss
+++ b/scss/blocks/_card.scss
@@ -2,9 +2,20 @@
     display: grid;
     gap: 12px;
     width: 262px;
+    cursor: pointer;
+
+    &:hover {
+
+        .card__btn {
+            transform: translateY(0);
+            opacity: 1;
+            pointer-events: all;
+        }
+    }
 
     &__picture {
         position: relative;
+        overflow: hidden;
     }
 
     &__new {
@@ -19,6 +30,23 @@
         color: #121212;
         background: #fff;
         border-radius: 4px;
+    }
+
+    &__fav {
+        position: absolute;
+        top: 16px;
+        right: 16px;
+    }
+
+    &__btn {
+        position: absolute;
+        right: 16px;
+        bottom: 16px;
+        left: 16px;
+        transform: translateY(50%);
+        opacity: 0;
+        transition: all .2s;
+        pointer-events: none;
     }
 
     &__desc {
