--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,6 +20,7 @@
 @import 'blocks/logo';
 @import 'blocks/dots';
 @import 'blocks/card';
+@import 'blocks/btn-fav';
 
 @import 'blocks/tagline';
 @import 'blocks/nav';
