--- a/scss/blocks/_btn-fav.scss
+++ b/scss/blocks/_btn-fav.scss
@@ -7,4 +7,18 @@
     background: #fff;
     border-radius: 32px;
     box-shadow: 0 8px 16px -8px rgba(15, 15, 15, 0.12);
+    transition: all .2s;
+
+    &:hover {
+        background: #cc2e2e;
+
+        svg {
+            fill: #fff;
+        }
+    }
+
+    svg {
+        fill: #6C7275;
+        transition: all .2s;
+    }
 }
