--- a/scss/blocks/_card.scss
+++ b/scss/blocks/_card.scss
@@ -2,9 +2,14 @@
     display: grid;
     gap: 12px;
     width: 262px;
-    cursor: pointer;
 
     &:hover {
+
+        .card__fav {
+            transform: translateY(0);
+            opacity: 1;
+            pointer-events: all;
+        }
 
         .card__btn {
             transform: translateY(0);
@@ -36,6 +41,10 @@
         position: absolute;
         top: 16px;
         right: 16px;
+        transform: translateY(-50%);
+        opacity: 0;
+        transition: all .2s;
+        pointer-events: none;
     }
 
     &__btn {
