--- a/scss/blocks/_card.scss
+++ b/scss/blocks/_card.scss
@@ -1,4 +1,5 @@
 .card {
+    position: relative;
     display: grid;
     gap: 12px;
     width: 262px;
@@ -41,6 +42,7 @@
         position: absolute;
         top: 16px;
         right: 16px;
+        z-index: 2;
         transform: translateY(-50%);
         opacity: 0;
         transition: all .2s;
@@ -52,6 +54,7 @@
         right: 16px;
         bottom: 16px;
         left: 16px;
+        z-index: 2;
         transform: translateY(50%);
         opacity: 0;
         transition: all .2s;
@@ -81,5 +84,13 @@
         font-size: 14px;
         line-height: 1.57143;
         color: #121212;
+    }
+
+    &__link {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
     }
 }
