--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,11 +19,13 @@
 @import 'blocks/logo';
 @import 'blocks/card';
 @import 'blocks/btn-fav';
+@import 'blocks/plate';
 
 @import 'blocks/tagline';
 @import 'blocks/nav';
 @import 'blocks/hero';
 @import 'blocks/arrivals';
+@import 'blocks/collection';
 @import 'blocks/footer';
 
 @import 'blocks/none';
