--- a/libs/swiper/_swiper-bundle--override.scss
+++ b/libs/swiper/_swiper-bundle--override.scss
@@ -24,6 +24,7 @@
     background: transparent;
     border: 1px solid transparent;
     opacity: 1;
+    transition: all .2s;
 
     &::before {
         content: '';
@@ -31,6 +32,7 @@
         height: 8px;
         background: #6c7275;
         border-radius: 50%;
+        transition: all .2s;
     }
 }
 
