--- a/scss/blocks/_card.scss
+++ b/scss/blocks/_card.scss
@@ -21,6 +21,8 @@
     &__picture {
         position: relative;
         overflow: hidden;
+        text-align: center;
+        background: #f3f5f7;
     }
 
     &__new {
