--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,4 +30,5 @@
 @import 'blocks/arrivals';
 @import 'blocks/collection';
 @import 'blocks/bestseller';
+@import 'blocks/promotion';
 @import 'blocks/footer';
