--- a/scss/blocks/_promotion.scss
+++ b/scss/blocks/_promotion.scss
@@ -1,8 +1,37 @@
 .promotion {
+    position: relative;
+    background: #fd9;
 
-    &__container {}
+    &::before {
+        content: '';
+        display: block;
+        width: 50%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: url('../img/promotion/bg.jpg') no-repeat top center / cover;
 
-    &__content {}
+        @include mediaBg() {
+            background-image: url('../img/promotion/bg@2x.jpg');
+        }
+    }
+
+    &__container {
+        padding-left: calc((100% - var(--container-width)) / 2 + (var(--container-width) / 2));
+        padding-right: calc((100% - var(--container-width)) / 2);
+    }
+
+    &__content {
+        padding: 100px 0 100px 72px;
+        display: grid;
+        gap: 24px;
+    }
+
+    &__desc {
+        display: grid;
+        gap: 16px;
+    }
 
     &__tagline {
         font-weight: 700;
@@ -21,10 +50,15 @@
         color: #121212;
     }
 
-    &__desc {
+    &__text {
         font-size: 20px;
         line-height: 1.6;
         color: #121212;
+    }
+
+    &__timer {
+        display: grid;
+        gap: 12px;
     }
 
     &__expires {
@@ -32,8 +66,6 @@
         line-height: 1.625;
         color: #141718;
     }
-
-    &__timer {}
 
     &__btn {}
 }
