--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,6 +23,7 @@
 @import 'blocks/card';
 @import 'blocks/btn-fav';
 @import 'blocks/plate';
+@import 'blocks/timer';
 
 @import 'blocks/tagline';
 @import 'blocks/nav';
