--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,6 +24,7 @@
 @import 'blocks/btn-fav';
 @import 'blocks/plate';
 @import 'blocks/timer';
+@import 'blocks/value';
 
 @import 'blocks/tagline';
 @import 'blocks/nav';
@@ -32,4 +33,5 @@
 @import 'blocks/collection';
 @import 'blocks/bestseller';
 @import 'blocks/promotion';
+@import 'blocks/values';
 @import 'blocks/footer';
