--- a/scss/main.scss
+++ b/scss/main.scss
@@ -34,4 +34,5 @@
 @import 'blocks/bestseller';
 @import 'blocks/promotion';
 @import 'blocks/values';
+@import 'blocks/newsletter';
 @import 'blocks/footer';
