--- a/scss/main.scss
+++ b/scss/main.scss
@@ -25,6 +25,7 @@
 @import 'blocks/plate';
 @import 'blocks/timer';
 @import 'blocks/value';
+@import 'blocks/form-newsletter';
 
 @import 'blocks/tagline';
 @import 'blocks/nav';
