--- a/scss/blocks/_newsletter.scss
+++ b/scss/blocks/_newsletter.scss
@@ -1,12 +1,29 @@
 .newsletter {
+    padding-top: 100px;
     height: 360px;
+    display: flex;
+    justify-content: center;
     background: #e2e4e3 url("../img/newsletter/bg.jpg") no-repeat center bottom;
 
     @include mediaBg() {
         background-image: url('../img/newsletter/bg@2x.jpg');
     }
 
-    &__content {}
+    &__content {
+        margin: 0 auto;
+        max-width: 488px;
+        flex-grow: 1;
+        text-align: center;
+    }
 
-    &__title {}
+    &__title {
+        margin-bottom: 8px;
+    }
+
+    &__desc {
+        margin-bottom: 32px;
+        font-size: 18px;
+        line-height: 1.66667;
+        color: #121212;
+    }
 }
