--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
     margin-top: auto;
+    padding: 80px 0 32px;
     background: #141718;
 
     &__row {
@@ -9,21 +10,82 @@
         gap: 15px;
     }
 
-    &__row--top {}
+    &__row--top {
+        margin-bottom: 49px;
+    }
 
-    &__row--border {}
+    &__row--border {
+        padding: 16px 0;
+        border-top: 0.50px solid #6c7275;
+    }
 
-    &__title {}
+    &__title {
+        display: flex;
+        align-items: center;
+        gap: 32px;
+    }
 
-    &__logo {}
+    &__logo {
+        font-family: var(--font-accent);
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 1;
+        text-align: center;
+        color: #fff;
 
-    &__separator {}
+        span {
+            color: #6c7275;
+        }
+    }
 
-    &__store {}
+    &__separator {
+        width: 1px;
+        height: 24px;
+        background: #6c7275;
+    }
 
-    &__nav {}
+    &__store {
+        font-size: 14px;
+        line-height: 1.57143;
+        color: #e8ecef;
+    }
 
-    &__copyrights {}
+    &__nav {
+        display: flex;
+        align-items: center;
+        gap: 40px;
 
-    &__socials {}
+        a {
+            font-size: 14px;
+            line-height: 1.57143;
+            color: #fefefe;
+        }
+    }
+
+    &__copyrights {
+        display: flex;
+        align-items: center;
+        gap: 28px;
+
+        p {
+            font-family: var(--font-accent);
+            font-size: 12px;
+            line-height: 1.66667;
+            color: #e8ecef;
+        }
+
+        a {
+            font-family: var(--font-accent);
+            font-weight: 600;
+            font-size: 12px;
+            line-height: 1.66667;
+            color: #fefefe;
+        }
+    }
+
+    &__socials {
+        display: flex;
+        align-items: center;
+        gap: 24px;
+    }
 }
