--- a/scss/blocks/_container-right.scss
+++ b/scss/blocks/_container-right.scss
@@ -1,8 +1,7 @@
 .container-right {
-    /* overflow-x: hidden; */
     padding-left: calc((100% - var(--container-width)) / 2 + var(--container-padding));
 
-    @media (max-width: var(--laptop-size)) {
+    @include tablet {
         padding-left: var(--container-padding);
     }
 }
