--- a/scss/blocks/_plate.scss
+++ b/scss/blocks/_plate.scss
@@ -1,7 +1,7 @@
 .plate {
     position: relative;
-    height: 319px;
-    background: #f3f5f7 no-repeat center / cover;
+    padding-bottom: 50%;
+    background: #f3f5f7 no-repeat center / contain;
 
     &--01 {
         background-image: url('../img/collections/01.jpg');
@@ -29,7 +29,6 @@
 
     &--tall {
         grid-row: 1 / 3;
-        height: 664px;
     }
 
     &__content {
@@ -41,6 +40,13 @@
         flex-direction: column;
         align-items: start;
         gap: 12px;
+
+        @include tablet {
+            right: 20px;
+            bottom: 20px;
+            left: 20px;
+            gap: 8px;
+        }
     }
 
     &__title {
@@ -50,6 +56,10 @@
         line-height: 1.11765;
         letter-spacing: -0.02em;
         color: #121212;
+
+        @include tablet {
+            font-size: 28px;
+        }
     }
 
     &__link {
@@ -62,6 +72,10 @@
         letter-spacing: -0.03em;
         color: #121212;
         border-bottom: 1px solid #121212;
+
+        @include tablet {
+            font-size: 14px;
+        }
 
         &:hover {
 
