--- a/scss/blocks/_btn.scss
+++ b/scss/blocks/_btn.scss
@@ -11,6 +11,10 @@
     border-radius: 8px;
     transition: all .2s ease-in;
 
+    @include mobile {
+        font-size: 16px;
+    }
+
     &:hover {
         opacity: 0.8;
     }
