--- a/scss/blocks/_arrivals.scss
+++ b/scss/blocks/_arrivals.scss
@@ -1,17 +1,31 @@
 .arrivals {
     padding: 48px 0;
 
+    @include mobile {
+        padding: 32px 0 0;
+    }
+
     &__row {
         margin-bottom: 48px;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        gap: 15px;
+        flex-wrap: wrap;
+        gap: 32px;
+
+        @include mobile {
+            margin-bottom: 40px;
+        }
     }
 
     &__title {}
 
-    &__dots {}
+    &__dots {
+
+        @include mobile {
+            display: none;
+        }
+    }
 
     &__slider {}
 }
