--- a/scss/blocks/_card.scss
+++ b/scss/blocks/_card.scss
@@ -1,6 +1,7 @@
 .card {
     position: relative;
-    display: grid;
+    display: flex;
+    flex-direction: column;
     gap: 12px;
 
     &:hover {
