--- a/scss/blocks/_collection.scss
+++ b/scss/blocks/_collection.scss
@@ -1,13 +1,28 @@
 .collection {
 
+    @include mobile {
+        padding-bottom: 40px;
+    }
+
     &__title {
         padding: 48px 0;
+
+        @include mobile {
+            padding: 40px 0 16px;
+            text-align: center;
+        }
     }
 
     &__grid {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
+        grid-auto-rows: 319px;
         gap: 24px;
+
+        @include mobile {
+            grid-template-columns: 1fr;
+            grid-auto-rows: 180px;
+            gap: 16px;
+        }
     }
 }
