--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -10,6 +10,15 @@
         height: 500px;
     }
 
+    @include mobile {
+        height: 692px;
+        background-image: url('../img/hero/bg-mobile.jpg');
+
+        @include mediaBg() {
+            background-image: url('../img/hero/bg-mobile@2x.jpg');
+        }
+    }
+
     &__container {
         height: 100%;
         display: flex;
