--- a/scss/blocks/_btn.scss
+++ b/scss/blocks/_btn.scss
@@ -25,9 +25,19 @@
         line-height: 1.75;
         letter-spacing: -0.03em;
         color: #fefefe;
+
+        @include mobile {
+            padding: 6px 40px;
+            font-size: 14px;
+        }
     }
 
     &--wide {
         width: 100%;
+
+        @include mobile {
+            padding-right: 10px;
+            padding-left: 10px;
+        }
     }
 }
