--- a/scss/blocks/_card.scss
+++ b/scss/blocks/_card.scss
@@ -49,6 +49,10 @@
         opacity: 0;
         transition: all .2s;
         pointer-events: none;
+
+        @include mobile {
+            display: none;
+        }
     }
 
     &__btn {
@@ -61,6 +65,10 @@
         opacity: 0;
         transition: all .2s;
         pointer-events: none;
+
+        @include mobile {
+            display: none;
+        }
     }
 
     &__desc {
@@ -79,6 +87,12 @@
         font-size: 16px;
         line-height: 1.625;
         color: #141718;
+
+        @include mobile {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            text-wrap: nowrap;
+        }
     }
 
     &__price {
