--- a/scss/blocks/_promotion.scss
+++ b/scss/blocks/_promotion.scss
@@ -2,7 +2,7 @@
     position: relative;
     background: #fd9;
 
-    &::before {
+    &::after {
         content: '';
         display: block;
         width: 50%;
@@ -10,10 +10,16 @@
         position: absolute;
         top: 0;
         left: 0;
-        background: url('../img/promotion/bg.jpg') no-repeat top center / cover;
+        background: url('../img/promotion/bg.jpg') no-repeat center / cover;
 
         @include mediaBg() {
             background-image: url('../img/promotion/bg@2x.jpg');
+        }
+
+        @include mobile {
+            position: static;
+            width: 100%;
+            height: 367px;
         }
     }
 
@@ -24,6 +30,10 @@
         @include tablet {
             padding-right: var(--container-padding);
         }
+
+        @include mobile {
+            padding-left: var(--container-padding);
+        }
     }
 
     &__content {
@@ -33,6 +43,10 @@
 
         @include tablet {
             padding: 50px 0 50px var(--container-padding);
+        }
+
+        @include mobile {
+            padding: 28px 0;
         }
     }
 
@@ -56,12 +70,20 @@
         line-height: 1.1;
         letter-spacing: -0.01em;
         color: #121212;
+
+        @include mobile {
+            font-size: 34px;
+        }
     }
 
     &__text {
         font-size: 20px;
         line-height: 1.6;
         color: #121212;
+
+        @include mobile {
+            font-size: 14px;
+        }
     }
 
     &__timer {
