--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,6 +22,8 @@
 @import 'blocks/timer';
 @import 'blocks/value';
 @import 'blocks/form-newsletter';
+@import 'blocks/mobile-nav';
+@import 'blocks/nav-icon';
 
 @import 'blocks/tagline';
 @import 'blocks/nav';
