--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,11 +22,11 @@
 @import 'blocks/timer';
 @import 'blocks/value';
 @import 'blocks/form-newsletter';
-@import 'blocks/mobile-nav';
-@import 'blocks/nav-icon';
 
 @import 'blocks/tagline';
 @import 'blocks/nav';
+@import 'blocks/mobile-nav';
+@import 'blocks/mobile-nav-fade';
 @import 'blocks/hero';
 @import 'blocks/arrivals';
 @import 'blocks/collection';
