--- a/scss/blocks/_mobile-nav.scss
+++ b/scss/blocks/_mobile-nav.scss
@@ -1,38 +1,24 @@
 .mobile-nav {
 	position: fixed;
-	// top: 0;
-	top: -100%;
-	width: 100%;
-	height: 100%;
-    z-index: 99;
-
-	display: flex;
-    flex-direction: column;
-    align-items: center;
-	justify-content: center;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    // background: linear-gradient(209deg, #4287b3 -17.38%, #133f6b 78.4%), #276195;
-	background: rgb(130, 156, 168);
-	transition: all 0.2s ease-in;
-}
-
-.mobile-nav--open {
 	top: 0;
-}
-
-.mobile-nav a {
-	color: #fff;
-}
-
-.mobile-nav__list {
+	left: 0;
+	z-index: 99;
+	transform: translateX(-120%);
+	padding: 24px;
+	width: 343px;
+	height: 100%;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	row-gap: 20px;
-	font-size: 28px;
+	justify-content: space-between;
+	gap: 32px;
+	background: #fff;
+	transition: transform .2s;
 
-	& .active {
-		opacity: 0.5;
+	&--open {
+		transform: translateX(0);
 	}
+
+	&__top {}
+
+	&__bottom {}
 }
