--- a/scss/blocks/_mobile-nav-fade.scss
+++ b/scss/blocks/_mobile-nav-fade.scss
@@ -6,5 +6,12 @@
     left: 0;
     z-index: 9;
     background: #adadad;
-    opacity: 0.9;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity .2s;
+
+    &--active {
+        opacity: 0.7;
+        pointer-events: all;
+    }
 }
