--- a/scss/blocks/_mobile-nav.scss
+++ b/scss/blocks/_mobile-nav.scss
@@ -4,6 +4,7 @@
 	left: 0;
 	z-index: 99;
 	transform: translateX(-120%);
+	overflow-y: auto;
 	padding: 24px;
 	width: 343px;
 	height: 100%;
@@ -18,7 +19,32 @@
 		transform: translateX(0);
 	}
 
-	&__top {}
+	&__top {
+		display: flex;
+		flex-direction: column;
+		gap: 16px;
+	}
 
-	&__bottom {}
+	&__bottom {
+		display: flex;
+		flex-direction: column;
+		gap: 20px;
+	}
+
+	&__header {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		gap: 32px;
+	}
+
+	&__search {}
+
+	&__nav {}
+
+	&__links {}
+
+	&__sign-in {}
+
+	&__socials {}
 }
