--- a/scss/blocks/_mobile-nav.scss
+++ b/scss/blocks/_mobile-nav.scss
@@ -40,7 +40,34 @@
 
 	&__search {}
 
+	&__search-input {
+		padding: 12px 16px 12px 48px;
+		width: 100%;
+		height: 46px;
+		font-size: 14px;
+		line-height: 1.57143;
+		color: #000;
+		background: url('../img/icons/search.svg') no-repeat left 16px center;
+		border-radius: 6px;
+		border: 1px solid #6c7275;
+
+		&::placeholder {
+			color: #6c7275;
+		}
+	}
+
 	&__nav {}
+
+	&__list {}
+
+	&__item {}
+
+	&__link {
+		font-weight: 500;
+		font-size: 14px;
+		line-height: 1.71429;
+		color: #141718;
+	}
 
 	&__links {}
 
