--- a/scss/blocks/_nav.scss
+++ b/scss/blocks/_nav.scss
@@ -77,5 +77,9 @@
         color: var(--yellow);
         background: #141718;
         border-radius: 100%;
+
+        &--white {
+            color: #fff;
+        }
     }
 }
